fixed wrapper vertical alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   background: var(--main-bg-color);
   padding: 200px;
-  height: 100vh;
+  height: 100%;
 }
 
 header {
