--- a/src/QuoteGenerator.css
+++ b/src/QuoteGenerator.css
@@ -7,7 +7,7 @@
   border-radius: 3px;
   display: block;
   margin: 0 auto;
-  width: 60%;
+  width: 50%;
   padding: 40px 50px;
 }
 
